# FantasticShaper

./: .gitignore  .ignore  .prettierignore  .prettierrc  AGENTS.md  Containerfile  LICENSE  README.md  deno.json  eslint.config.js  package.json  tsconfig.json  vite.config.js  vite.config.ts  vitest.config.ts
src/: app.html
src-tauri/: .gitignore  Cargo.toml  clippy.toml  rustfmt.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/routes/: +layout.svelte  +page.svelte  Header.svelte  layout.css  page.css  style.css
src/test/: Counter.svelte  Counter.test.ts  setup.ts
tests/: Counter.test.ts
